src/app/pages/unix-timestamp-converter-page/unix-timestamp-input-card/unix-timestamp-input-card.component.scss
.flex {
  display: flex;
  gap: 8px 32px;
  align-items: center;
}

.wrap {
  flex-wrap: wrap;
}

.input-form-wrapper {
  margin-top: 16px;
}

.input-form-m {
  width: 320px;
}

.input-form-s {
  width: 80px;
}

.input-form {
  margin-bottom: 0;
  margin-top: 16px;

  ::ng-deep .mat-mdc-form-field-bottom-align::before {
    height: 0 !important;
  }

  ::ng-deep .mat-mdc-form-field-subscript-wrapper {
    height: 0;
    margin-top: 0;
  }
}

.mode-toggle {
  margin: 8px 0;

  ::ng-deep .mat-button-toggle-button {
    height: 24px;
    padding: 0 12px;
    font-size: 13px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 4px;
  }

  ::ng-deep .mat-button-toggle-label-content {
    display: flex;
    align-items: center;
  }

  ::ng-deep .mat-button-toggle-checkbox-wrapper {
    display: flex;
    align-items: center;
  }
}

